Reorganizacion de Archivos y Dependencias

--- a/src/bodas.html
+++ b/src/bodas.html
@@ -4,17 +4,35 @@
     <!-- ======================= METADATA ======================= -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
-    <meta name="keywords" content="">
-    <meta name="author" content="">
-    <title>Sol Casteran</title>
+    <meta name="description" content="Fotógrafa especializada en bodas, eventos y productos en Málaga, ofreciendo servicios en toda Europa. Transformo momentos especiales en recuerdos duraderos.">
+    <meta name="keywords" content="Fotógrafa de Bodas, Fotografía de Bodas en España, Fotografia en Europa">
+    <meta name="author" content="Sol Casteran">
+    <meta name="robots" content="index, all, follow">
+    <meta name="audience" content="all">
+    <meta name="category" content="Fotografia de bodas">
+
+    <!-- OPEN GRAPH -->
+    <meta property="og:title" content="Pagina Web de Sol Casteran">
+    <meta property="og:type" content="Pagina Web">
+    <meta property="og:description" content="Fotógrafa especializada en bodas, eventos y productos en Málaga, ofreciendo servicios en toda Europa.">
+    <meta property="og:image" content="assets/img/portfolio/HR-Portfolio/portfolio-29.jpg">
+    <meta property="og:image:alt" content="Foto de pareja al atardecer tomada por Sol Casteran">
+    <meta property="og:url" content="https://solcasteran.com">
+
+    <!-- ITEM PROP -->
+    <meta itemprop="telephone" content="34 644479724">
+
+    <!-- Web en ingles -->
+    <link rel="canonical" href="https://solcasteran.com">
+    
+    <title>Sol Casteran - Bodas</title>
     <!-- ======================= BOXIICONS ======================= -->
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
     
 
     <!-- ======================= CSS ======================= -->
-    <link rel="stylesheet" href="assets/scss/style.css">
+    <link rel="stylesheet" href="/css/style.css">
 
     <!-- ======================= FAVICON ======================= -->
     <link rel="shortcut icon" href="assets/img/logo/LogoSolLila.svg" type="image/x-icon">
@@ -69,7 +87,7 @@
                         <h3>B bou Hotel Cortijo Bravo / Málaga</h3>
                         <p>Este cortijo restaurado ubicado en un entorno ideal entre la costa y las montañas de Málaga, elegancia rústica y el encanto andaluz hacen de la boda entre Lorna y Jamie un escenario perfecto para una boda inolvidable. Lorna y Jamie son Irlandeses y tuvieron la gran idea de festejar su día en la soleada Málaga junto a familiares y amigos. Fue una boda con muchas emociones y mucho sol, como ellos querían.</p>
                             <div class="bodas__content-button">
-                                <a href="Lorna&Jamie.html" target="_blank" class="bodas__button">VER MAS</a>
+                                <a href="pages/Lorna&Jamie.html" target="_blank" class="bodas__button">VER MAS</a>
                             </div>
                     </figcaption>
                 </figure>
@@ -82,7 +100,7 @@
                         <h3>Club de Tenis y Padel Lew Hoad / Mijas</h3>
                         <p>El Club de Tenis y Padel Lew Hoad está situado en el corazón de la Costa del Sol y es aquí donde Amanda de Suecia y Rune de Noruega decidieron festejar su gran día junto a sus más cercanos familiares. Una boda llena de emociones, diversión y la felicidad de verse juntos emprendiendo un nuevo camino y una nueva historia.</p>
                             <div class="bodas__content-button">
-                                <a href="Amanda&Rune.html" target="_blank" class="bodas__button">VER MAS</a>
+                                <a href="pages/Amanda&Rune.html" target="_blank" class="bodas__button">VER MAS</a>
                             </div>
                     </figcaption>
                 </figure>
@@ -95,7 +113,7 @@
                         <h3>Hoeve Engelendael / Sint-Laureins /Bélgica</h3>
                         <p>Hoeve Engelendael, idílico rincón de la campiña belga, ubicado en un oasis de paz y naturaleza lo hacen perfecto para inmortalizar la boda de Liesbeth & Roderic. Junto a su mas íntima familia y amigos decidieron dar el sí.  Emociones congeladas en el tiempo, para revivir una y otra vez.</p>
                             <div class="bodas__content-button">
-                                <a href="Liesbeth&Roderic.html"  target="_blank" class="bodas__button">VER MAS</a>
+                                <a href="pages/Liesbeth&Roderic.html"  target="_blank" class="bodas__button">VER MAS</a>
                             </div>
                     </figcaption>
                 </figure>
@@ -108,7 +126,7 @@
                         <h3>Hotel Traube Tonbach / Baiersbronn, Alemania</h3>
                         <p>En este encantador rincón de Alemania, cada boda es una sinfonía de tradición, naturaleza y elegancia. Desde la majestuosidad de la Selva Negra hasta los pintorescos paisajes que abrazan esta tierra, cada imagen es un poema visual que narra una historia de amor, como la de Rosa y Sammy. Una boda que comenzó el viernes por la noche con una cena junto a sus más cercanos familiares y amigos. El sábado continuó con la celebración civil entre ambos y de ahí pasamos a una comida en medio de la selva negra alemana, luego de una pausa volvimos al hotel donde la celebración continuó hasta el amanecer. El festejo terminó el domingo con un brunch junto a sus amigos. Una boda inolvidable!</p>
                             <div class="bodas__content-button">
-                                <a href="Rosa&Sammy.html" target="_blank" class="bodas__button">VER MAS</a>
+                                <a href="pages/Rosa&Sammy.html" target="_blank" class="bodas__button">VER MAS</a>
                             </div>
                     </figcaption>
                 </figure>
@@ -121,7 +139,7 @@
                         <h3>Nerja/ España</h3>
                         <p>Con sus playas de ensueño, calles empedradas y un encanto mediterráneo, este pintoresco rincón de la Costa del Sol se convierte en el escenario ideal para una boda íntima e inolvidable como la de Katie y Mikey. A pesar del clima la sonrisa de Katie no desapareció de su rostro.  Comenzamos la celebración en la Parroquia El Salvador donde esta pareja de británicos dijo que sí. Al salir de la iglesia el sol brillaba y para aprovechar tomamos unas fotos en el conocido Balcón de Europa, luego fuimos a Cochran's Terraza - Pub para finalizar el día con una celebración muy iíntima.</p>
                             <div class="bodas__content-button">
-                                <a href="Katie&Mikey.html" target="_blank" class="bodas__button">VER MAS</a>
+                                <a href="pages/Katie&Mikey.html" target="_blank" class="bodas__button">VER MAS</a>
                             </div>
                     </figcaption>
                 </figure>
@@ -134,7 +152,7 @@
                         <h3> Villa Nougués / Tucumán / Argentina</h3>
                         <p>En un hermoso pueblo ubicado en una geografía privilegiada de sol y de verde. Allí, rodeados de sus familiares y sus amigos es donde Analu y Nico festejaron su unión. Disfrutamos como niños desde los preparativos hasta la fiesta final. Una boda en un lugar donde la tradición y la alegría se funden para celebrar el amor.</p>
                             <div class="bodas__content-button">
-                                <a href="Analu&Nico.html" target="_blank" class="bodas__button">VER MAS</a>
+                                <a href="pages/Analu&Nico.html" target="_blank" class="bodas__button">VER MAS</a>
                             </div>
                     </figcaption>
                 </figure>
@@ -170,6 +188,6 @@
         <!-- ======================= SCROLL UP ======================= -->
 
     <!-- ======================= MAIN JS======================= -->
-    <script src="assets/js/main.js"></script>
+    <script src="/js/main.js"></script>
 </body>
 </html>
