--- a/src/contacto.html
+++ b/src/contacto.html
@@ -4,17 +4,34 @@
     <!-- ======================= METADATA ======================= -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
-    <meta name="keywords" content="">
-    <meta name="author" content="">
-    <title>Sol Casteran</title>
+    <meta name="description" content="Fotógrafa especializada en bodas, eventos y productos en Málaga, ofreciendo servicios en toda Europa. Transformo momentos especiales en recuerdos duraderos.">
+    <meta name="keywords" content="Fotógrafa de Bodas, Fotografía de Bodas en España, Fotografia en Europa">
+    <meta name="author" content="Sol Casteran">
+    <meta name="robots" content="index, all, follow">
+    <meta name="audience" content="all">
+    <meta name="category" content="Fotografia de bodas">
+
+    <!-- OPEN GRAPH -->
+    <meta property="og:title" content="Pagina Web de Sol Casteran">
+    <meta property="og:type" content="Pagina Web">
+    <meta property="og:description" content="Fotógrafa especializada en bodas, eventos y productos en Málaga, ofreciendo servicios en toda Europa.">
+    <meta property="og:image" content="assets/img/portfolio/HR-Portfolio/portfolio-29.jpg">
+    <meta property="og:image:alt" content="Foto de pareja al atardecer tomada por Sol Casteran">
+    <meta property="og:url" content="https://solcasteran.com">
+
+    <!-- ITEM PROP -->
+    <meta itemprop="telephone" content="34 644479724">
+
+    <!-- Web en ingles -->
+    <link rel="canonical" href="https://solcasteran.com">
+    <title>Sol Casteran - Contacto</title>
     <!-- ======================= BOXIICONS ======================= -->
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
     
 
     <!-- ======================= CSS ======================= -->
-    <link rel="stylesheet" href="assets/scss/style.css">
+    <link rel="stylesheet" href="/css/style.css">
 
     <!-- ======================= FAVICON ======================= -->
     <link rel="shortcut icon" href="assets/img/logo/LogoSolLila.svg" type="image/x-icon">
@@ -139,6 +156,6 @@
 
 
     <!-- ======================= MAIN JS======================= -->
-    <script src="assets/js/main.js"></script>
+    <script src="/js/main.js"></script>
 </body>
 </html> 
