--- a/src/portfolio.html
+++ b/src/portfolio.html
@@ -4,22 +4,38 @@
     <!-- ======================= METADATA ======================= -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
-    <meta name="keywords" content="">
-    <meta name="author" content="">
-    <title>Sol Casteran </title>
+    <meta name="description" content="Fotógrafa especializada en bodas, eventos y productos en Málaga, ofreciendo servicios en toda Europa. Transformo momentos especiales en recuerdos duraderos.">
+    <meta name="keywords" content="Fotógrafa de Bodas, Fotografía de Bodas en España, Fotografia en Europa">
+    <meta name="author" content="Sol Casteran">
+    <meta name="robots" content="index, all, follow">
+    <meta name="audience" content="all">
+    <meta name="category" content="Fotografia de bodas">
+
+    <!-- OPEN GRAPH -->
+    <meta property="og:title" content="Pagina Web de Sol Casteran">
+    <meta property="og:type" content="Pagina Web">
+    <meta property="og:description" content="Fotógrafa especializada en bodas, eventos y productos en Málaga, ofreciendo servicios en toda Europa.">
+    <meta property="og:image" content="assets/img/portfolio/HR-Portfolio/portfolio-29.jpg">
+    <meta property="og:image:alt" content="Foto de pareja al atardecer tomada por Sol Casteran">
+    <meta property="og:url" content="https://solcasteran.com">
+
+    <!-- ITEM PROP -->
+    <meta itemprop="telephone" content="34 644479724">
+
+    <!-- Web en ingles -->
+    <link rel="canonical" href="https://solcasteran.com">
+    <title>Sol Casteran - Portfolio</title>
     <!-- ======================= BOXIICONS ======================= -->
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
     
 
     <!-- ======================= CSS ======================= -->
-    <link rel="stylesheet" href="assets/scss/style.css">
+    <link rel="stylesheet" href="/css/style.css">
     <!-- <link rel="stylesheet" href="assets/css/lightbox.css"> -->
 
     <!-- ======================= CSS FANCYBOX ======================= -->
-    <link  href="assets/js/@fancyapps/fancybox/dist/jquery.fancybox.min.css" rel="stylesheet">
-    <link rel="stylesheet"  href="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.css"/>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.css"/>
 
     <!-- ======================= FAVICON ======================= -->
     <link rel="shortcut icon" href="assets/img/logo/LogoSolLila.svg" type="image/x-icon">
@@ -67,7 +83,7 @@
                 <div class="masonry__container">
                     <div class="masonry__item">
                         <a href="assets/img/portfolio/HR-Portfolio/portfolio1.jpg" data-fancybox="gallery" data-caption="Caption #1"><img class="masonry__image" src="assets/img/portfolio/portfolio1-compress.jpg" alt=""></a>
-                    </div>         
+                    </div>     
                     <div class="masonry__item">
                         <a href="assets/img/portfolio/HR-Portfolio/portfolio2.jpg" data-fancybox="gallery" data-caption="Caption #1"><img class="masonry__image" src="assets/img/portfolio/portfolio2-compress.jpg" alt=""></a>
                     </div> 
@@ -195,10 +211,9 @@
 <!-- ======================= SCROLL UP ======================= -->
 
 <!-- ======================= MAIN JS======================= -->
-<script src="assets/js/main.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.umd.js"></script>
-<script src="//code.jquery.com/jquery-3.2.1.min.js"></script>
-<script src="assets/js/@fancyapps/fancybox/dist/jquery.fancybox.min.js"></script>
+<script src="/js/portfolio/gallery.js"></script>
+<script src="/js/main.js"></script>
 </body>
 </html>
 </body>
