Refactorizacion HTML + SEO

--- a/src/bodas.html
+++ b/src/bodas.html
@@ -32,7 +32,7 @@
     
 
     <!-- ======================= CSS ======================= -->
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
 
     <!-- ======================= FAVICON ======================= -->
     <link rel="shortcut icon" href="assets/img/logo/LogoSolLila.svg" type="image/x-icon">
@@ -68,91 +68,91 @@
     <!-- ======================= TITLE SECTION======================= -->
     <main class="main">
         <section class="portfolio section" id="portfolio">
-            <div class="portfolio__container-portfolio">
-                <div class="portfolio__content">
-                    <div class="portfolio__title">
+            <article class="portfolio__container-portfolio">
+                <main class="portfolio__content">
+                    <header class="portfolio__title">
                         <h1>Bodas</h1>
                         <img src="assets/img/portfolio/Vector.png" alt="Ola">
-                    </div>
-                </div>
-            </div>
+                    </header>
+                </main>
+            </article>
         </section>
         <!-- ======================= BODAS SECTION======================= -->
         <article class="bodas section" id="bodas">
             <div class="bodas__container-bodas">
                 <figure class="bodas__content">
-                    <img src="assets/img/bodas/Portadas Casamientos/Lorna-Jamie-portada.jpg" alt="">
+                    <img src="assets/img/bodas/Portadas Casamientos/Lorna-Jamie-portada.jpg" alt="Portada de Casamiento de Lorna y Jamie">
                     <figcaption class="bodas__content-container">
                         <h2>Lorna & Jamie</h2>
                         <h3>B bou Hotel Cortijo Bravo / Málaga</h3>
                         <p>Este cortijo restaurado ubicado en un entorno ideal entre la costa y las montañas de Málaga, elegancia rústica y el encanto andaluz hacen de la boda entre Lorna y Jamie un escenario perfecto para una boda inolvidable. Lorna y Jamie son Irlandeses y tuvieron la gran idea de festejar su día en la soleada Málaga junto a familiares y amigos. Fue una boda con muchas emociones y mucho sol, como ellos querían.</p>
                             <div class="bodas__content-button">
-                                <a href="pages/Lorna&Jamie.html" target="_blank" class="bodas__button">VER MAS</a>
+                                <a href="Lorna&Jamie.html" target="_blank" class="bodas__button">VER MAS</a>
                             </div>
                     </figcaption>
                 </figure>
             </div>
             <div class="bodas__container-bodas">
                 <figure class="bodas__content">
-                    <img src="assets/img/bodas/Portadas Casamientos/Amanda-Rune-portada.jpg" alt="">
+                    <img src="assets/img/bodas/Portadas Casamientos/Amanda-Rune-portada.jpg" alt="Portada de Casamiento de Amanda y Rune">
                     <figcaption class="bodas__content-container">
                         <h2>Amanda & Rune</h2>
                         <h3>Club de Tenis y Padel Lew Hoad / Mijas</h3>
                         <p>El Club de Tenis y Padel Lew Hoad está situado en el corazón de la Costa del Sol y es aquí donde Amanda de Suecia y Rune de Noruega decidieron festejar su gran día junto a sus más cercanos familiares. Una boda llena de emociones, diversión y la felicidad de verse juntos emprendiendo un nuevo camino y una nueva historia.</p>
                             <div class="bodas__content-button">
-                                <a href="pages/Amanda&Rune.html" target="_blank" class="bodas__button">VER MAS</a>
+                                <a href="Amanda&Rune.html" target="_blank" class="bodas__button">VER MAS</a>
                             </div>
                     </figcaption>
                 </figure>
             </div>
             <div class="bodas__container-bodas">
                 <figure class="bodas__content">
-                    <img src="assets/img/bodas/Portadas Casamientos/Liesbeth-Roderic-portada.jpg" alt="">
+                    <img src="assets/img/bodas/Portadas Casamientos/Liesbeth-Roderic-portada.jpg" alt="Portada de Casamiento de Liesbeth y Roderic" loading="lazy">
                     <figcaption class="bodas__content-container">
                         <h2>Liesbeth & Roderic</h2>
-                        <h3>Hoeve Engelendael / Sint-Laureins /Bélgica</h3>
+                        <h3>Hoeve Engelendael / Sint-Laureins / Bélgica</h3>
                         <p>Hoeve Engelendael, idílico rincón de la campiña belga, ubicado en un oasis de paz y naturaleza lo hacen perfecto para inmortalizar la boda de Liesbeth & Roderic. Junto a su mas íntima familia y amigos decidieron dar el sí.  Emociones congeladas en el tiempo, para revivir una y otra vez.</p>
                             <div class="bodas__content-button">
-                                <a href="pages/Liesbeth&Roderic.html"  target="_blank" class="bodas__button">VER MAS</a>
+                                <a href="Liesbeth&Roderic.html"  target="_blank" class="bodas__button">VER MAS</a>
                             </div>
                     </figcaption>
                 </figure>
             </div>
             <div class="bodas__container-bodas">
                 <figure class="bodas__content">
-                    <img src="assets/img/bodas/Portadas Casamientos/Rosa-Sammy-portadajpg.jpg" alt="">
+                    <img src="assets/img/bodas/Portadas Casamientos/Rosa-Sammy-portadajpg.jpg" alt="Portada de Casamiento De Rosa y Sammy" loading="lazy">
                     <figcaption class="bodas__content-container">
                         <h2>Rosa & Sammy</h2>
-                        <h3>Hotel Traube Tonbach / Baiersbronn, Alemania</h3>
+                        <h3>Hotel Traube Tonbach / Baiersbronn / Alemania</h3>
                         <p>En este encantador rincón de Alemania, cada boda es una sinfonía de tradición, naturaleza y elegancia. Desde la majestuosidad de la Selva Negra hasta los pintorescos paisajes que abrazan esta tierra, cada imagen es un poema visual que narra una historia de amor, como la de Rosa y Sammy. Una boda que comenzó el viernes por la noche con una cena junto a sus más cercanos familiares y amigos. El sábado continuó con la celebración civil entre ambos y de ahí pasamos a una comida en medio de la selva negra alemana, luego de una pausa volvimos al hotel donde la celebración continuó hasta el amanecer. El festejo terminó el domingo con un brunch junto a sus amigos. Una boda inolvidable!</p>
                             <div class="bodas__content-button">
-                                <a href="pages/Rosa&Sammy.html" target="_blank" class="bodas__button">VER MAS</a>
+                                <a href="Rosa&Sammy.html" target="_blank" class="bodas__button">VER MAS</a>
                             </div>
                     </figcaption>
                 </figure>
             </div>
             <div class="bodas__container-bodas">
                 <figure class="bodas__content">
-                    <img src="assets/img/bodas/Portadas Casamientos/Katie-Mikey-portada.jpg" alt="">
+                    <img src="assets/img/bodas/Portadas Casamientos/Katie-Mikey-portada.jpg" alt="Portada de Casamiento de Katie y Mikey" loading="lazy">
                     <figcaption class="bodas__content-container">
                         <h2>Katie & Mikey</h2>
-                        <h3>Nerja/ España</h3>
+                        <h3>Nerja / España</h3>
                         <p>Con sus playas de ensueño, calles empedradas y un encanto mediterráneo, este pintoresco rincón de la Costa del Sol se convierte en el escenario ideal para una boda íntima e inolvidable como la de Katie y Mikey. A pesar del clima la sonrisa de Katie no desapareció de su rostro.  Comenzamos la celebración en la Parroquia El Salvador donde esta pareja de británicos dijo que sí. Al salir de la iglesia el sol brillaba y para aprovechar tomamos unas fotos en el conocido Balcón de Europa, luego fuimos a Cochran's Terraza - Pub para finalizar el día con una celebración muy iíntima.</p>
                             <div class="bodas__content-button">
-                                <a href="pages/Katie&Mikey.html" target="_blank" class="bodas__button">VER MAS</a>
+                                <a href="Katie&Mikey.html" target="_blank" class="bodas__button">VER MAS</a>
                             </div>
                     </figcaption>
                 </figure>
             </div>
             <div class="bodas__container-bodas">
                 <figure class="bodas__content">
-                    <img src="assets/img/bodas/Portadas Casamientos/Analu-Nico-portada.jpg" alt="">
+                    <img src="assets/img/bodas/Portadas Casamientos/Analu-Nico-portada.jpg" alt="Portada de Casamiento Analu y Nico" loading="lazy">
                     <figcaption class="bodas__content-container">
                         <h2>Analu & Nico</h2>
                         <h3> Villa Nougués / Tucumán / Argentina</h3>
                         <p>En un hermoso pueblo ubicado en una geografía privilegiada de sol y de verde. Allí, rodeados de sus familiares y sus amigos es donde Analu y Nico festejaron su unión. Disfrutamos como niños desde los preparativos hasta la fiesta final. Una boda en un lugar donde la tradición y la alegría se funden para celebrar el amor.</p>
                             <div class="bodas__content-button">
-                                <a href="pages/Analu&Nico.html" target="_blank" class="bodas__button">VER MAS</a>
+                                <a href="Analu&Nico.html" target="_blank" class="bodas__button">VER MAS</a>
                             </div>
                     </figcaption>
                 </figure>
@@ -188,6 +188,6 @@
         <!-- ======================= SCROLL UP ======================= -->
 
     <!-- ======================= MAIN JS======================= -->
-    <script src="/js/main.js"></script>
+    <script src="javascript/main.js"></script>
 </body>
 </html>
