--- a/src/contacto.html
+++ b/src/contacto.html
@@ -31,7 +31,7 @@
     
 
     <!-- ======================= CSS ======================= -->
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
 
     <!-- ======================= FAVICON ======================= -->
     <link rel="shortcut icon" href="assets/img/logo/LogoSolLila.svg" type="image/x-icon">
@@ -67,14 +67,14 @@
     <!-- ======================= MAIN CONTACT SECTION======================= -->
     <main class="main">
         <section class="portfolio section" id="portfolio">
-            <div class="portfolio__container-portfolio">
-                <div class="portfolio__content">
-                    <div class="portfolio__title">
+            <article class="portfolio__container-portfolio">
+                <main class="portfolio__content">
+                    <header class="portfolio__title">
                         <h1>¿Hablamos?</h1>
                         <img src="assets/img/portfolio/Vector.png" alt="Ola">
-                    </div>
-                </div>
-            </div>
+                    </header>
+                </main>
+            </article>
         </section>
         <section class="contact section" id="contact">
             <div class="contact__container-icons">
@@ -156,6 +156,6 @@
 
 
     <!-- ======================= MAIN JS======================= -->
-    <script src="/js/main.js"></script>
+    <script src="javascript/main.js"></script>
 </body>
 </html> 
