--- a/src/index.html
+++ b/src/index.html
@@ -32,7 +32,7 @@
     
 
     <!-- ======================= CSS ======================= -->
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
 
     <!-- ======================= FAVICON ======================= -->
     <link rel="shortcut icon" href="assets/img/logo/LogoSolLila.svg" type="image/x-icon">
@@ -82,65 +82,65 @@
         <!-- ======================= ABOUT ======================= -->
         <section class="about section" id="about">
             <div class="about__container">
-                <div class="about__content">
-                    <div class="about__title">
+                <article class="about__content">
+                    <header class="about__title">
                         <h1>Sobre Mi</h1>
-                    </div>
+                    </header>
                     <p>Soy Sol, bienvenidos a mi pagina web!<br>
                         Nací en Tucumán, Argentina desde muy chica <br> me gustó vi<u>ajar</u> y la vida me dio la op<u>ortunidad de</u> hacerlo.
                         En el camino aprendí de fo<u>tografía y</u> me enamoré, descubrí una nueva forma de ver al mund<u>o, s</u>us colores, sus paisajes <br> y sus sorpresas.
                         Viví durante un tiempo en Seattl<u>e pero </u>tenía que cruzar el charco, como le decimos en Tucumán al océan<u>o,
                         ahora</u> vivo en #Málag<u>a que, </u>resulta ser perfe<u>cto para </u>fotografiar
                         Vivir en la Costa del Sol me gusta tanto como hacer fotos... ¡y no es porque lleve mi nombre!</p>
-                </div>
-                <div class="about__image">
-                    <img src="assets/img/home/SolCasteranSobreMi.png" alt="">
-                </div>
+                </article>
+                <figure class="about__image">
+                    <img src="assets/img/home/SolCasteranSobreMi.png" alt="Foto de Sol Casteran" loading="lazy">
+                </figure>
             </div>
         </section> 
         <!-- ======================= SERVICES ======================= -->
         <section class="services section" id="services">
-            <div class="services__title">
+            <header class="services__title">
                 <h2>Me enfoco en conseguir<br>tus mejores recuerdos</h2>
-            </div>
-            <div class="services__container">
-                <div class="services__images">
-                    <img src="assets/img/home/imagen1-seccion-sobremi.jpg" alt="Foto Boda">
-                    <img src="assets/img/home/imagen2-seccion-sobremi.jpg" alt="Foto Boda">
-                    <img src="assets/img/home/imagen3-seccion-sobremi.jpg" alt="Foto Boda">
-                </div>
-            </div>
-            <div class="services__button">
+            </header>
+            <article class="services__container">
+                <figure class="services__images">
+                    <img src="assets/img/home/imagen1-seccion-sobremi.jpg" alt="Foto Boda" loading="lazy">
+                    <img src="assets/img/home/imagen2-seccion-sobremi.jpg" alt="Foto Boda" loading="lazy">
+                    <img src="assets/img/home/imagen3-seccion-sobremi.jpg" alt="Foto Boda" loading="lazy">
+                </figure>
+            </article>
+            <footer class="services__button">
                 <a href="contacto.html" class="services__button--round">RESERVAR FECHA</a>
-            </div>
+            </footer>
         </section>
         <!-- ======================= WRAPPER ======================= -->
         <section class="socialwrapper section">
-                <div class="socialwrapper__content-container">
+                <header class="socialwrapper__content-container">
                     <h3 class="socialwrapper__title">
                         Sigueme en instagram
                     </h3>
                     <div class="socialwrapper__button">
                         <a href="https://www.instagram.com/solcasteran/" class="socialwrapper__button--round">@SOLCASTERAN</a>
                     </div>
-                </div>
-                    <div class="socialwrapper__container">
-                        <div class="socialwrapper__content"> 
-                            <img class="socialwrapper__imagen" src="assets/img/home/grid1.jpg" alt="">
-                        </div>
-                        <div class="socialwrapper__content"> 
-                            <img class="socialwrapper__imagen" src="assets/img/home/grid2.jpg" alt="">
-                        </div>
-                        <div class="socialwrapper__content"> 
-                            <img class="socialwrapper__imagen" src="assets/img/home/grid3.jpg" alt="">
-                        </div>
-                        <div class="socialwrapper__content"> 
-                            <img class="socialwrapper__imagen" src="assets/img/home/grid4.jpg" alt="">
-                        </div>
-                        <div class="socialwrapper__content"> 
-                            <img class="socialwrapper__imagen" src="assets/img/home/grid5.jpg" alt="">
-                        </div>
-                    </div>
+                </header>
+                    <article class="socialwrapper__container">
+                        <figure class="socialwrapper__content"> 
+                            <img class="socialwrapper__imagen" src="assets/img/home/grid1.jpg" alt="Foto de pareja">
+                        </figure>
+                        <figure class="socialwrapper__content"> 
+                            <img class="socialwrapper__imagen" src="assets/img/home/grid2.jpg" alt="Foto de pareja">
+                        </figure>
+                        <figure class="socialwrapper__content"> 
+                            <img class="socialwrapper__imagen" src="assets/img/home/grid3.jpg" alt="Foto de pareja" loading="lazy">
+                        </figure>
+                        <figure class="socialwrapper__content"> 
+                            <img class="socialwrapper__imagen" src="assets/img/home/grid4.jpg" alt="Foto de pareja" loading="lazy">
+                        </figure>
+                        <figure class="socialwrapper__content"> 
+                            <img class="socialwrapper__imagen" src="assets/img/home/grid5.jpg" alt="Foto de pareja" loading="lazy">
+                        </figure>
+                    </article>
         </section> 
     </main> 
     <!-- ======================= SOCIAL WRAPPER ======================= -->
@@ -154,8 +154,8 @@
             <div class="footer__semicircle"><img src="assets/img/logo/Slogo.png" alt=""></div>
         </div>
         <div class="footer__content">
-            <div class="footer__semicircle-logo"><img src="assets/img/logo/solcasteran.png" alt=""></div>
-            <div class="footer__semicircle-logo2"><img src="assets/img/logo/photography.png" alt=""></div>
+            <figure class="footer__semicircle-logo"><img src="assets/img/logo/solcasteran.png" alt=""></figure>
+            <figure class="footer__semicircle-logo2"><img src="assets/img/logo/photography.png" alt=""></figure>
         </div>
         <div class="footer__socials-container">
             <ul class="footer__socials">
@@ -169,11 +169,7 @@
         </div>
         <div class="footer__bottom_wrapper"></div>
     </footer>
-    <!-- ======================= SCROLL UP ======================= -->
-
-
-
     <!-- ======================= MAIN JS======================= -->
-    <script src="/js/main.js"></script>
+    <script src="javascript/main.js"></script>
 </body>
 </html>
